2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Controls/Src/ListBox/ListBox.cs:
	* Controls/Src/ListBox/ListBoxItem.cs: Update to SL4 final API.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBox.cs: Update the implementation
	  of Selector.SelectedItems to pass more of drt 232. Basically
	  we need to keep two copies of the list, one which is
	  publicly accessible by the user and one which is our private
	  'master' list. We listen for changes to the public one and
	  then mirror them in the master list if they're valid. The
	  public list is always synced to the master one after any
	  modifications to the selection so that if the user does
	  something mad, we can revert that.

2010-05-13  Chris Toshok  <toshok@ximian.com>

	* RuntimeControls/SilverlightControls/HyperlinkButton.cs: change
	up NavigateInternally a bit so that we don't re-traverse subtrees
	as we walk up the hierarchy, and also check for TargetName if we
	have one.  Fixes the hyperlink portion of drt #705.

2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Controls/Src/Common/NullableBoolConverter.cs: Handle null values properly.
	Fixes a stack overflow in drt #PPC.NullableBoolConverterTest.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ToolTip/ToolTip.cs: Add in some missing default
	  values.

2010-03-18  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs:
	* Controls/Src/ToolTip/ToolTipService.cs:
	* Controls/Src/ToggleButton/ToggleButton.cs:
	* Controls/Src/ScrollViewer/ScrollViewer.cs: 1) Regenerate the
	  default value tests for SL3.
	2) Add in a lot of missing DefaultValue attributes to native
	  DPs and fixed some cases where we were using DefaultValue
	  instead of AutoCreateValue.
	3) Remove a bunch of places where we set local values in ctors
	  instead of just using the DefaultValue.

2010-03-15  Alan McGovern  <amcgovern@novell.com>
