@@ -1,3 +1,9 @@
+2010-06-30  Alan McGovern  <amcgovern@novell.com>
+
+	* Controls/Src/ListBox/ListBox.cs: When
+	  ItemsControl.ItemTemplate changes we need to update all the
+	  generated containers in the Listbox (but not combobox!).
+
 2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Controls/Src/ListBox/ListBox.cs:
